# mysql-topology-manager-demo

./: .gitignore  README.md  pyproject.toml  release-notes.txt  requirements.txt  sample_config.json
mysql_topo/: cli.py  connector.py  db.py  inspector.py  mock.py
mysql_topo/checkers/: __init__.py  connection_count.py  fragmentation_check.py  schema_scale.py  storage_check.py  topology_scale.py
