[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-topo"
version = "0.2.0"
description = "MySQL Multi-Version Topology & Diagnostic Tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "PyMySQL>=1.1",
]

[project.scripts]
mysql-topo = "mysql_topo.cli:main"

[tool.setuptools.packages.find]
include = ["mysql_topo*"]
